PAY-6021: Pre-Requisite: Upgrade Spring Boot & App Insights    [PAY-6021] (https://tools.hmcts.net/jira/browse/PAY-6021).